adding bare urls to explosivo

--- a/txrx/templates/comments/_md_helptext.html
+++ b/txrx/templates/comments/_md_helptext.html
@@ -14,8 +14,12 @@
       <td><b>bold</b></td>
     </tr>
     <tr>
-      <td>[reddit!](http://reddit.com)</td>
-      <td><a href="http://reddit.com">reddit!</a></td>
+      <td>[txrx!](http://txrxlabs.org)</td>
+      <td><a href="http://txrxlabs.org">txrx!</a></td>
+    </tr>
+    <tr>
+      <td>http://txrxlabs.org</td>
+      <td><a href="http://txrxlabs.org">http://txrxlabs.org</a></td>
     </tr>
     <tr>
       <td>* item 1<br>* item 2<br>* item 3</td>
