--- a/membership/templates/membership/officers.html
+++ b/membership/templates/membership/officers.html
@@ -2,12 +2,15 @@
 {% load thumbnail %}
 {% load url from future %}
 
+{% block full_title %}Officers{% endblock %}
+{% block header_content %}TX/RX Labs - Officers{% endblock %}
+
 {% block content %}
 {% for officer in officers %}
 <div class="span3">
   <div class="well">
     <a href="{% url "course:instructor_detail" officer.user.id %}">
-      {% thumbnail officer.user.usermembership.photo "180x240" as im %}
+      {% thumbnail officer.user.usermembership.photo.file "180x240" as im %}
       <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
       {% endthumbnail %}
       <div class="name">{{ officer.user.get_full_name }}</div>
