--- a/membership/templates/membership/officers.html
+++ b/membership/templates/membership/officers.html
@@ -10,7 +10,7 @@
 <div class="span3">
   <div class="well">
     <a href="{% url "course:instructor_detail" officer.user.id %}">
-      {% thumbnail officer.user.usermembership.photo.file "180x240" as im %}
+      {% thumbnail officer.user.usermembership.photo.file "180x240" crop="top" as im %}
       <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
       {% endthumbnail %}
       <div class="name">{{ officer.user.get_full_name }}</div>
