--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -77,6 +77,17 @@
       {% endfor %}
     </div>
     {% endif %}
+    {% if related_classes %}
+    <div class="related_classes">
+      <strong>Can't make it to this class? Checkout these other classes!</strong>
+      {% for klass in related_classes %}
+      <div>
+        {% if klass.full %}<strong class="full">[FULL]</strong>{% endif %}
+        <a href="{{ klass.get_absolute_url }}">{{ klass }}</a>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
     <div style="clear: both;"></div>
     {% display_comment_toplevel_for session %}
   </div>
