--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -118,6 +118,10 @@ label .help-text {
 #show_closed,[for=show_closed] { display: inline-block; margin-bottom: 5px; vertical-align: middle; }
 #show_closed { margin-left: 20px; margin-top: 0; }
 .week { margin-bottom: 20px; }
+.related_classes {
+  padding-top: 20px;
+  .full { color: red; }
+}
 .class-table .name {
   width: 350px;
 }
