updating notifications to remind people about classes

--- a/membership/templates/membership/unsubscribe.html
+++ b/membership/templates/membership/unsubscribe.html
@@ -2,20 +2,19 @@
 {% load url from future %}
 
 {% block title %}Unsubscribe{% endblock %}
-{% block header_content %}You have been {{ verb }}!{% endblock %}
+{% block header_content %}You have been Unsubscribed!{% endblock %}
 
 {% block content %}
 <p class="lead">
-  {% if 'subscribe' in request.GET %}
-  You have been re-subscribed to comment responses. Any time someone responds to a comment you make on this website, you will be emailed a notification. 
-  <br />
-  To re-unsubscribe again redundantly, click <a href="/membership/unsubscribe/{{ key }}/">here</a>.
-  {% else %}
+  {% if attr == "global" %}
+  You have unsubscribed from all notifications. We will no longer send you notifications for upcoming classes or comment responses.
+  {% elif attr == "comments" %}
   You have unsubscribed from comment responses. You will not be notified if someone replies to your comments, so check the site regularly to see responses.
-  <br />
-  To quickly re-subscribe, click <a href="/membership/unsubscribe/{{ key }}/?subscribe">here</a>.
+  {% elif attr == "classes" %}
+  You have unsubscribed from class reminders. Please be careful not to miss any classes.
   {% endif %}
-  <br />
-  To change your account settings, click <a href="/accounts/settings/">here (login required)</a>.
+</p>
+<p class="lead">
+  You can undo this by changing your <a href="/accounts/settings/">account settings</a> (login required).
 </p>
 {% endblock %}
