--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -448,3 +448,6 @@ h3.date {
   label { margin-bottom: 10px; width: 100%; }
   textarea { height: 75px; width: 100%; }
 }
+
+p.error { color: red; } /* currently only used on login form */
+ul.errorlist { color: red; }
