--- a/event/templates/event/_subscribe_to_calendar.html
+++ b/event/templates/event/_subscribe_to_calendar.html
@@ -8,7 +8,7 @@
       <li><a href="{{ google_calendar_url }}http://{{ all_ics|urlencode }}" target="_blank">
           Subscribe to TX/RX Events Calendar
       </a></li>
-      <li><a href="{{ google_calendar_url }}http://{{ all_ics|urlencode }}" target="_blank">
+      <li><a href="{{ google_calendar_url }}http://{{ all_classes_ics|urlencode }}" target="_blank">
           Subscribe to TX/RX Classes Calendar
       </a></li>
     </ul>
