--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -7,6 +7,7 @@
   FULL (${{ session.section.fee }})
   {% else %}
   <a class="btn btn-success add" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();">{% if session.in_progress %}In Progress{% else %}Enroll{% endif %} ${{ session.section.fee }}</a>
+  <a class="btn btn-success drop" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();" title="double enroll">+1 Person</a>
   <a class="btn btn-danger drop" href="javascript:simpleCart.remove('{{ session.id }}'); toggleCourses();">Drop ${{ session.section.fee }}</a>
   {% endif %}
 </span>
