begin switch to bootstrap 3

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -10,16 +10,9 @@ section { padding-bottom: 25px; }
   position: absolute;
   z-index: 10;
 }
-
+.navbar-brand { padding: 10px; }
 /* txrx overrides */
 body { margin-bottom: 50px; overflow: scroll; }
-.navbar .brand { padding: 3px 20px; }
-.navbar .brand img { padding-top: 3px; }
-
-.icon-white,.nav-pills>.active>a>[class^="icon-"],.nav-pills>.active>a>[class*=" icon-"],.nav-list>.active>a>[class^="icon-"],.nav-list>.active>a>[class*=" icon-"],.navbar-inverse .nav>.active>a>[class^="icon-"],.navbar-inverse .nav>.active>a>[class*=" icon-"],.dropdown-menu>li>a:hover>[class^="icon-"],.dropdown-menu>li>a:hover>[class*=" icon-"],.dropdown-menu>.active>a>[class^="icon-"],.dropdown-menu>.active>a>[class*=" icon-"],.dropdown-submenu:hover>a>[class^="icon-"],.dropdown-submenu:hover>a>[class*=" icon-"]{
-  background-image:url("../img/glyphicons-halflings-white.png") !important;
-  background-color: transparent;
-}
 
 .membership_features {
   height: 145px;
