--- a/txrx/templates/pjax.html
+++ b/txrx/templates/pjax.html
@@ -1,8 +1,8 @@
 {% block main %}
-<div class="span8">
+<div class="col-sm-8">
   {% block content %}{% endblock %}
 </div>
-<div class="span4">
+<div class="col-sm-4">
   {% block side %}{% include "_side.html" %}{% endblock %}
 </div>
 {% endblock %}
