--- a/txrx/templates/_styles.html
+++ b/txrx/templates/_styles.html
@@ -1,19 +1,19 @@
 {% load compress %}
 {% compress css %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/codrspace.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}mptt_comments/css/mptt_comments.css" />
 {% endcompress %}
 
 {# the following conditional loads compress only in development #}
 {% if settings.DEBUG %}
-<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
 <script>less = { env: 'development' };</script>
 {% compress js %}<script src="{{ STATIC_URL }}js/less.js"></script>{% endcompress %}
 {% else %}
 {% compress css %}
-<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
 {% endcompress %}
 {% endif %}
 
