--- a/txrx/templates/edit.html
+++ b/txrx/templates/edit.html
@@ -15,9 +15,9 @@
     <div id="{{ field.name }}" class="control-group">
       <label for="id_{{ field.name }}">
         <b>{{ field.label }}</b>
-        {% if field.help_text %}<span class="muted help-text">{{ field.help_text|safe }}</span>{% endif %}
       </label>
       {{ field }}
+      {% if field.help_text %}<div class="muted help-text">{{ field.help_text|safe }}</div>{% endif %}
     </div>
     {% endfor %}
   </div>
@@ -28,27 +28,31 @@
   </div>
   {% include "_partial-post-list.html" with current_post=post %}
   {% endif %}
-  <div class="modal hide" id="image-modal">
-    <div class="modal-header">
-      <a class="close" data-dismiss="modal">×</a>
-      <h3>Select an Image to Insert</h3>
-    </div>
-    <div class="modal-body">
-      <iframe style="height: 320px;width: 100%; border: none; margin: 0; padding: 0;"></iframe>
-    </div>
-    <div class="modal-footer">
-      <a href="javascript:;" onclick="addImage();$(this).hide();return false;" class="btn">Add New Image</a>
-      <a href="#" data-dismiss="modal" class="btn">Close</a>
-    </div>
-  </div>
-  <div class="modal" id="preview-modal">
-    <div class="modal-header">
-      <a class="close" data-dismiss="modal">×</a>
-      <h3>Preview</h3>
-    </div>
-    <div class="modal-body"></div>
-    <div class="modal-footer">
-      <a href="#" data-dismiss="modal" class="btn">Close</a>
+  <div class="modal fade" id="image-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <a class="close" data-dismiss="modal">×</a>
+          <h3>Select an Image to Insert</h3>
+        </div>
+        <div class="modal-body">
+          <iframe style="height: 320px;width: 100%; border: none; margin: 0; padding: 0;"></iframe>
+        </div>
+        <div class="modal-footer">
+          <a href="javascript:;" onclick="addImage();$(this).hide();return false;" class="btn">Add New Image</a>
+          <a href="#" data-dismiss="modal" class="btn">Close</a>
+        </div>
+      </div>
+      <div class="modal" id="preview-modal">
+        <div class="modal-header">
+          <a class="close" data-dismiss="modal">×</a>
+          <h3>Preview</h3>
+        </div>
+        <div class="modal-body"></div>
+        <div class="modal-footer">
+          <a href="#" data-dismiss="modal" class="btn">Close</a>
+        </div>
+      </div>
     </div>
   </div>
 </form>
@@ -66,8 +70,6 @@
 {% endblock %}
 
 {% block extra_body %}
-<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-modal.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-typeahead.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}wmd/wmd.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/blog.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}jquery.insertat.js"></script>
