--- a/membership/templates/membership/join-us.html
+++ b/membership/templates/membership/join-us.html
@@ -1,4 +1,4 @@
-{% extends parent %}
+{% extends "base.html" %}
 {% load cache %}
 
 {% block header_content %}Become a Member of TX/RX Labs{% endblock %}
