--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -1,3 +1,4 @@
+@screen-xs-max: 768px;
 .wmd-panel {margin: 0; }
 section { padding-bottom: 25px; }
 .comment:target > .comment_outer { background-color: @successBackground; }
@@ -10,7 +11,13 @@ section { padding-bottom: 25px; }
   position: absolute;
   z-index: 10;
 }
+/* bootstrap overrides */
 .navbar-brand { padding: 10px; }
+.navbar-collapse { max-height: none; }
+@media (max-width: @screen-xs-max) {
+  nav li { border-bottom: 1px solid rgba(0,0,0,0.1); }
+  nav > ul > li { border-top: 1px solid rgba(0,0,0,0.1); }
+}
 /* txrx overrides */
 body { margin-bottom: 50px; overflow: scroll; }
 
