--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -18,9 +18,6 @@
 <div class="course course-detail" data-subject="{{ session.subjects|join:"," }}"
      {%if not session.course.closed%}data-open{%endif%}
      data-date="{{ session.starttime|date:"Ymd" }}">
-  {% if session.get_photoset %}
-  {% include "widgets/photo_slideshow.html" with photos=session.get_photoset.get_photos %}
-  {% endif %}
   <div class="fee">
     {% include "course/_enroll_link.html" %}
   </div>
@@ -29,11 +26,12 @@
     <a href="{% url "instructor_detail" session.user.username %}">
       <i class="icon-user"></i>{{ session.get_instructor_name }}</a>
   </div>
+  {{ session.get_session_photoset }}
   {% with photos=session.get_session_photoset.get_photos %}
   <div class="photoset{% if photos|length < 3 %} no-slides{% endif %}">
     <ul>
       {% for photo in photos %}
-      {% thumbnail photo.src "200x200" crop="center" as im %}
+      {% thumbnail photo.file "200x200" crop="center" as im %}
       <li><a href="{{ photo.src.url }}" data-lightbox="slideshow">
           <img src="{{ im.url }}" alt="{{ photo.name }}"/></a></li>
       {% endthumbnail %}
