--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -26,18 +26,6 @@
     <a href="{% url "instructor_detail" session.user.username %}">
       <i class="icon-user"></i>{{ session.get_instructor_name }}</a>
   </div>
-  {% with photos=session.get_session_photoset.get_photos %}
-  <div class="photoset{% if photos|length < 3 %} no-slides{% endif %}">
-    <ul>
-      {% for photo in photos %}
-      {% thumbnail photo.file "200x200" crop="center" as im %}
-      <li><a href="{{ photo.src.url }}" data-lightbox="slideshow">
-          <img src="{{ im.url }}" alt="{{ photo.name }}"/></a></li>
-      {% endthumbnail %}
-      {% endfor %}
-    </ul>
-  </div>
-  {% endwith %}
   <div class="details">
     <div class="left">
       <div class="subjects">
@@ -115,4 +103,16 @@
 {% include "course/_cart.html" %}
 {% endif %}
 
+{% with photos=session.get_session_photoset.get_photos %}
+<div class="class_photos{% if photos|length < 3 %} no-slides{% endif %}">
+  <ul>
+    {% for photo in photos %}
+    {% thumbnail photo.file "400x400" crop="center" as im %}
+    <li><a href="{{ photo.src.url }}" data-lightbox="slideshow">
+        <img src="{{ im.url }}" alt="{{ photo.name }}"/></a></li>
+    {% endthumbnail %}
+    {% endfor %}
+  </ul>
+</div>
+{% endwith %}
 {% endblock %}
