--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -1,13 +1,48 @@
+{% if session.section.fee %}
 <span class="enroll-link">
-  {% if session in user_sessions %}
-  ENROLLED (${{ session.section.fee }})
+  {% if session.user_enrollment.quantity == 1 %}
+  ENROLLED
+  {% elif session.user_enrollment %}
+  ENROLLED x {{ session.user_enrollment.quantity }}
   {% elif session.closed %}
   {{ session.closed_string }} (${{ session.section.fee }})
   {% elif session.full %}
   FULL (${{ session.section.fee }})
   {% else %}
-  <a class="btn btn-success add" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();">{% if session.in_progress %}In Progress{% else %}Enroll{% endif %} ${{ session.section.fee }}</a>
-  <a class="btn btn-success drop" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();" title="double enroll">+1 Person</a>
-  <a class="btn btn-danger drop" href="javascript:simpleCart.remove('{{ session.id }}'); toggleCourses();">Drop ${{ session.section.fee }}</a>
+  <button class="btn btn-success add" onclick="addClass({{ session.id }});">
+    {% if session.in_progress %}In Progress{% else %}Enroll{% endif %} ${{ session.section.fee }}</button>
+  <button class="btn btn-success drop" onclick="addClass({{ session.id }});" title="double enroll">
+    +1 Person</button>
+  <button class="btn btn-danger drop" onclick="simpleCart.remove('{{ session.id }}'); toggleCourses();">
+    Drop ${{ session.section.fee }}</button>
   {% endif %}
 </span>
+<script>
+  window.SESSIONS_ON_PAGE = window.SESSIONS_ON_PAGE || {};
+  window.SESSIONS_ON_PAGE[{{ session.id }}] = {
+    'name': "{{ session.section.course }} ({{ session.first_date|date:"m/d/Y" }})",
+    'fee': "{{ session.section.fee }}",
+  };
+</script>
+{% else %}
+<span class="rsvp-link{% if session.user_enrollment %} attending{% endif %}">
+  {% if session.archived %}
+  CLOSED
+  {% elif request.user %}
+  <div class="is_full">FULL</div>
+  <div class="number_attending unrsvp">RSVP'd x {{ session.user_enrollment.quantity }}</div>
+  <div class="rsvp">Not Attending</div>
+  <button class="btn btn-primary rsvp" onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}');">
+    RSVP $0</button>
+  <button class="btn btn-primary unrsvp not_full" title="Bring a friend!"
+          onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}?plus_one=1');">+1 Person</button>
+  <button class="btn btn-danger unrsvp" onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}?drop=1');">
+    un-RSVP</button>
+  <a href="javascript:;" onclick="$(this).hide(); return false;" class="message"></a>
+  {% else %}
+  You must 
+  <a href="/accounts/login/?next={{ session.get_absolute_url|urlencode }}">Login</a>
+  to RSVP
+  {% endif %}
+</span>
+{% endif %}
