--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -1,4 +1,4 @@
-{% extends parent %}
+{% extends "base.html" %}
 {% load url from future %}
 {% load thumbnail %}
 
@@ -56,11 +56,6 @@
     {% for session in week.sessions %}
     {% include "course/_session_row.html" %}
     {% endfor %}
-    {% if forloop.last %}
-    {% if request.user.is_superuser or 'test' in request.GET %}
-    {% include "course/_session_row.html" with session=test_session %}
-    {% endif %}
-    {% endif %}
   </table>
 </div>
 {% endfor %}
