mail admins bug... oops

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -392,6 +392,18 @@ h3.date {
   }
 }
 
+.course-detail {
+  .left {
+    position: relative;
+    .calendar_widget {
+      font-size: 18px;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+  }
+}
+
 /* comments */
 
 #comments {
