--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -272,7 +272,8 @@ label .help-text {
   }
 }
 
-.page-header {
+.course-detail .page-header {
+  padding-right: 100px;
   position: relative;
   .EnrollLink, .RsvpLink {
     background: white;
