--- a/txrx/templates/email/course_reminder.html
+++ b/txrx/templates/email/course_reminder.html
@@ -2,7 +2,9 @@
 
 This is a reminder that you have a class today at TX/RX Labs. The class starts today ({{ class_time.start|date:"F d" }}) at {{ class_time.start|date:"h:i a" }}.
 
-We started sending these notifications because quite a few people forget that they have signed up for a class. If you would like to not receive these notifications, please use one of the links below.
+{% if session.section.requirements %}Please remember the following requirements: {{ session.section.requirements }}
+
+{% endif %}We started sending these notifications because quite a few people forget that they have signed up for a class. If you would like to not receive these notifications, please use one of the links below.
 
 Unsubscribe from class reminders: {{ SITE_URL }}{% url "unsubscribe" "classes" user.id %}?LA_KEY={{ la_key.key }}
 
