--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -4,49 +4,37 @@
 {% load url from future %}
 
 {% block full_title %}Welcome to TX/RX Labs{% endblock %}
-{% block header_content %}TX/RX Labs - Houston's Hackerspace{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
-<div id="myCarousel" class="carousel slide">
-  <div class="carousel-inner">
-    {% for post in featured_posts %}
-    {% thumbnail post.photo|get_override:"landscape_crop" "620x375" crop="center" as im %}
-    <div class="item{% if forloop.first %} active{% endif %}">
-      <a href="{{ post.get_absolute_url }}">
-        <img src="{{ im.url }}" alt="" width="{{ im.width }}" height="{{ im.height }}" />
-        <div class="carousel-caption">
-          <h4>{{ post.title }}</h4>
-          <p>{{ post.content|striptags|truncatewords:30 }}</p>
-        </div>
-      </a>
-    </div>
-    {% endthumbnail %}
-    {% endfor %}
+<div class="FeaturedThings row">
+  <h3 class="block_title">Featured Projects</h3>
+  {% for thing in things %}
+  {% thumbnail thing.first_photo|get_override:"square_crop" "300x300" crop="center" as im %}
+  <div class="thing thing{{ forloop.counter }}">
+    <a href="{{ thing.get_absolute_url }}">
+      <img src="{{ im.url }}" />
+      <div class="title">
+        {{ thing.title }}
+        <div class="author"> by {{ thing.user }}</div>
+      </div>
+    </a>
   </div>
-  {% if featured_posts|length > 1 %}
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-  {% endif %}
+  {% endthumbnail %}
+  {% endfor %}
 </div>
-<div class="paginator">
-  {% if paginator.has_previous %}
-  <a class="left" href="?{{ paginator.previous_qs }}">&lt; Previous</a>
-  {% endif %}
-  Page {{ paginator.number }}
-  {% if paginator.has_next %}
-  <a class="right" href="?{{ paginator.next_qs }}">Next &gt;</a>
-  {% endif %}
-</div>
-{% for post in paginator.current_list %}
-{% include "_post_content.html" with truncate_posts="True" %}
-{% endfor %}
-<div class="paginator">
-  {% if paginator.has_previous %}
-  <a class="left" href="?{{ paginator.previous_qs }}">&lt; Previous</a>
-  {% endif %}
-  Page {{ paginator.number }}
-  {% if paginator.has_next %}
-  <a class="right" href="?{{ paginator.next_qs }}">Next &gt;</a>
-  {% endif %}
+<div class="recent_blogs row">
+  <h3 class="block_title">Recent Blogs</h3>
+  {% for post in posts %}
+  {% thumbnail post.photo|get_override:"square_crop" "300x300" crop="center" as im %}
+  <div class="post col-xs-4">
+    <a href="{{ post.get_absolute_url }}">
+      <img src="{{ im.url }}" />
+      <div class="title">{{ post }}</div>
+      <div class="date">{{ post.publish_dt|date:"F j, Y" }}</div>
+    </a>
+  </div>
+  {% endthumbnail %}
+  {% endfor %}
 </div>
 {% endblock %}
