a few more styles for the restyle

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -32,8 +32,17 @@ header, #main {
 
 h3.block_title {
   font-weight: normal;
-  padding: 15px;
+  margin: 0 15px 15px;
   text-transform: uppercase;
+}
+
+#side {
+  h3.block_title {
+    border-bottom: 1px solid;
+    margin: 0 0 15px;
+    padding-top: 10px;
+    text-align: right;
+  }
 }
 
 .membership_features {
