--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -23,7 +23,6 @@
     <script src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
     {% endcompress %}
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}thumb-scroller/css/thumb-scroller.css" />
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}lightbox/css/lightbox.css" />
     <script>
       var f = new Favico({
@@ -53,7 +52,7 @@
       <div class="col-sm-8">
         {% block content %}{% endblock %}
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4" id="side">
         {% block side %}{% include "_side.html" %}{% endblock %}
       </div>
       {% endblock %}
