more stylings and bootstrap 3 stuff

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -679,5 +679,5 @@ ul.errorlist { color: red; }
 @media (min-width:990px) { .FeaturedThings .thing { width: 25%; } }
 
 .recent_blogs {
-  img { margin-bottom: 10px; max-width: 100%; }
+  img { height: auto; margin-bottom: 10px; max-width: 100%; }
 }
