--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -62,7 +62,20 @@
     <footer>
     </footer>
     {% endblock %}
-    <script src="{{ STATIC_URL }}less/bootstrap/js/bootstrap.min.js"></script>
+    {% compress js %}
+    <script src="{{ STATIC_URL }}less/bootstrap/js/affix.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/button.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/collapse.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/modal.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/scrollspy.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/transition.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/alert.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/carousel.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/dropdown.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/tooltip.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
+    <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
+    {% endcompress %}    
     <script src="{{ STATIC_URL }}codrspace.js"></script>
     <script>
 
