--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -7,7 +7,7 @@
 {% block header %}{% endblock %}
 
 {% block content %}
-<div class="FeaturedThings row">
+<section class="FeaturedThings row">
   <h3 class="block_title">Featured Projects</h3>
   {% for thing in things %}
   {% thumbnail thing.first_photo|get_override:"square_crop" "300x300" crop="center" as im %}
@@ -22,19 +22,19 @@
   </div>
   {% endthumbnail %}
   {% endfor %}
-</div>
-<div class="recent_blogs row">
+</section>
+<section class="recent_blogs row">
   <h3 class="block_title">Recent Blogs</h3>
   {% for post in posts %}
   {% thumbnail post.photo|get_override:"square_crop" "300x300" crop="center" as im %}
   <div class="post col-xs-4">
     <a href="{{ post.get_absolute_url }}">
-      <img src="{{ im.url }}" />
+      <img src="{{ im.url }}" width="300" height="300" />
       <div class="title">{{ post }}</div>
       <div class="date">{{ post.publish_dt|date:"F j, Y" }}</div>
     </a>
   </div>
   {% endthumbnail %}
   {% endfor %}
-</div>
+</section>
 {% endblock %}
